/**
 * MIT License
 * Copyright (c) 2021 Fonoster Inc
 *
 * The Numbers proto contains the artificats for the administration
 * of Numbers.
 */
syntax = "proto3";

package fonoster.numbers.v1beta1;

option go_package = "github.com/fonoster/fonoster/mods/numbers/fonoster/services/protos/numbers";

import "protoc-gen-openapiv2/options/annotations.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "common.proto";

service Numbers {
  // Lists Numbers from the SIP Proxy subsystem
  rpc ListNumbers (ListNumbersRequest) returns (ListNumbersResponse) {
    option (google.api.http) = { get: "/v1beta1/numbers" };
  };
  // Creates a new Number resource
  rpc CreateNumber (CreateNumberRequest) returns (Number) {
    option (google.api.http) = { 
      post: "/v1beta1/numbers"
      body: "*"
    };
  };
  // Gets the ingess information for a given e164 number
  rpc GetIngressInfo (GetIngressInfoRequest) returns (IngressInfo) {};
  // Gets Number using its reference
  rpc GetNumber (GetNumberRequest) returns (Number) {
    option (google.api.http) = { get: "/v1beta1/numbers/{ref}" };
  };
  // Change or update fields in a resource
  rpc UpdateNumber (UpdateNumberRequest) returns (Number) {
    option (google.api.http) = { 
      put: "/v1beta1/numbers/{ref}"
      body: "*" 
    };
  };
  // Hard delete of a Number resource
  rpc DeleteNumber (DeleteNumberRequest) returns (fonoster.common.v1beta1.Empty) {
    option (google.api.http) = { 
      delete: "/v1beta1/numbers/{ref}"
    };
  };
}

message ListNumbersRequest {
   // The maximum number of items in the list
  int32 page_size = 1;

  // The next_page_token value returned from the previous request, if any.
  string page_token = 2;

  // Level of detail of the individual entities (reserved)
  fonoster.common.v1beta1.View view = 3;
}

message ListNumbersResponse {
  // List of Numbers
  repeated Number numbers = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message CreateNumberRequest {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    example: "{\"providerRef\": \"aynB1z0tzd\", \"e164Number\": \"+17853178070\", \"ingressInfo\": { \"webhook\": \"https://c5b6-172-220-243-215.ngrok.io\"}}"
  }; 
  string provider_ref = 1 [(google.api.field_behavior) = REQUIRED];
  string e164_number = 2 [(google.api.field_behavior) = REQUIRED];
  string aor_link = 3;
  IngressInfo ingress_info = 4;
}

message UpdateNumberRequest {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    example: "{\"ingressInfo\": { \"webhook\": \"https://c5b6-172-220-243-215.ngrok.io\"}}"
  };  
  // Number's reference  
  string ref = 1;
  string aor_link = 2;
  IngressInfo ingress_info = 3;
}

message GetNumberRequest {
  // Number's reference  
  string ref = 1;
}

message GetIngressInfoRequest {
  string e164_number = 1;
}

message DeleteNumberRequest {
  // Number's reference  
  string ref = 1;
}

message Number {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    example: "{\"ref\": \"aiuY1z0tzd\", \"providerRef\": \"aynB1z0tzd\", \"e164Number\": \"+17853178070\", \"ingressInfo\": { \"webhook\": \"https://c5b6-172-220-243-215.ngrok.io\"}, \"createTime\": \"2021-10-05T13:23:07.221Z\", \"updateTime\": \"2021-10-05T13:23:07.221Z\"}"
  };
  // Number's reference
  string ref = 1;
  string provider_ref = 2 [(google.api.field_behavior) = REQUIRED];
  string e164_number = 3 [(google.api.field_behavior) = REQUIRED];
  string aor_link = 4;
  IngressInfo ingress_info = 5;
  string create_time = 6 [(google.api.field_behavior) = OUTPUT_ONLY];
  string update_time = 7 [(google.api.field_behavior) = OUTPUT_ONLY];
}

message IngressInfo {
  string access_key_id = 1;
  string webhook = 2;
  string app_ref = 3;
}